--- a/src/XbrzSharp/XbrzSharp.csproj
+++ b/src/XbrzSharp/XbrzSharp.csproj
@@ -11,7 +11,7 @@
     <RepositoryUrl>https://github.com/tzinmein/xbrz-net/</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <Description>.NET 8 port of xBRZ 1.8 – high-quality 2D image upscaling library.</Description>
-    <PackageLicenseExpression>GPL-3.0</PackageLicenseExpression>
+    <PackageLicenseExpression>GPL-3.0-only</PackageLicenseExpression>
     <Title>XbrzSharp</Title>
     <PackageTags>xBRZ; upscaling; 2D; image</PackageTags>
     <Copyright>Copyright $([System.DateTime]::Now.Year) Ho Tzin Mein</Copyright>
