Update NuGet API key in dotnet.yml
Replaced `${{ secrets.NUGET_API_KEY }}` with `${{ secrets.XBRZ_NUGET_KEY }}` in the `dotnet.yml` workflow file to use a different or updated API key for publishing `.nupkg` files to NuGet.

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -70,4 +70,4 @@ jobs:
           path: ./artifacts
 
       - name: Publish to NuGet
-        run: dotnet nuget push "./artifacts/*.nupkg" --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json --skip-duplicate
+        run: dotnet nuget push "./artifacts/*.nupkg" --api-key ${{ secrets.XBRZ_NUGET_KEY }} --source https://api.nuget.org/v3/index.json --skip-duplicate
