--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -33,7 +33,7 @@ jobs:
         id: vars
         run: |
           if [[ "${GITHUB_REF}" == refs/tags/* ]]; then
-            VERSION=${GITHUB_REF#refs/tags/}
+            VERSION=${GITHUB_REF#refs/tags/v}
           elif [[ "${GITHUB_REF_NAME}" == "master" ]]; then
             VERSION="1.0.2-beta.${GITHUB_RUN_NUMBER}"
           else
